# RetLang

./: .gitignore  LICENSE  README.md
backend/: Cargo.toml
backend/src/: lib.rs  main.rs
backend/src/compiler/: ast.rs  constants.rs  core.rs  mod.rs  semantics.rs  transpiler.rs
backend/src/lexer/: core.rs  error.rs  mod.rs  tokens.rs
backend/src/linker/: core.rs  error.rs
backend/src/parser/: core.rs  error.rs  mod.rs
backend/src/utils/: core.rs  gcc.rs  loc.rs  mod.rs
benchmarks/: Cargo.toml
benchmarks/benches/: parser.rs  transpiler.rs
examples/: calculator.ret  factorial.ret  headers.ret  increment.ret  memory_bounds_test.ret  memory_conditional_test.ret  memory_error_test.ret  rule110.ret  simple.ret  stack_return.ret
