[package]
name = "retc"
description = "A backend for an ret programming language"
version = "0.1.0"
edition = "2024"
license-file = "../LICENSE"
resolver = "2"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.16", features = ["derive"] }
hex = "0.4.3"
miette = { version = "7.5.0", features = ["fancy"] }
regex = "1.11.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = { version = "3.12", features = ["chrono"] }
thiserror = "2.0.12"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = [
    "fmt",
    "registry",
    "env-filter",
    "time",
    "chrono",
] }
